test/regression/idl/compiler/fail/forwardUndefined.idl
/**
 * This IDL example comprises merely a forward declaration
 * of an interface. No proper declaration is provided.
 * RESULT: infinite loop in Jacorb compiler. Completion
 *         in OpenORB compiler (though obviously no code generation)
 */
interface Fred;